solved overflowing titles issue

--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -48,7 +48,6 @@ main {
     position: relative;
     overflow: hidden;
     height: 40vh;
-    border: 2px solid rgba(223, 202, 202, 0.274);
     .poster{
       width:100%;
       height: 100%;
@@ -78,7 +77,6 @@ main {
   }
 
   .section {
-    border: 1px solid white;
     padding: 10px;
     width: 100vw;
     position: relative;
@@ -124,7 +122,6 @@ main {
         .poster {
           width: 100%;
           margin: 5px;
-          transition: 3s;
           border: none;
           background-color: #ffffff22;
           position: relative;
@@ -132,9 +129,12 @@ main {
             width: 100%;
             height: auto;
           }
-          h3 {
-            font-size: 0.8rem;
-            padding: 4px;
+          .titleDiv{
+            height: 50px;
+            h3 {
+              font-size: 0.8rem;
+              padding: 4px;
+            }
           }
           .description{
             padding: 3px;
